# Face_recognition_ros2

./: CMakeLists.txt  README.md  package.xml
src/: dlib_face_detector.cpp
